05-BasicInternship/01-FrontendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proshop-frontend-deployment
  labels:
    app: proshop-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proshop-frontend
  template:
    metadata:
      labels:
        app: proshop-frontend
    spec:
      containers:
      - name: proshop-frontend
        # Using the public image on Docker Hub
        image: arun2565/my-app-frontend:tag23
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: proshop-frontend-service
  labels:
    app: proshop-frontend
spec:
  type: ClusterIP
  selector:
    app: proshop-frontend
  ports:
    - port: 80
      targetPort: 80
