05-BasicInternship/02-frontnendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: proshop-frontend-service
  labels:
    app: proshop-frontend
spec:
  # Use LoadBalancer to expose externally on GKE
  type: LoadBalancer
  selector:
    app: proshop-frontend
  ports:
    - port: 80          # External port
      targetPort: 80    # Container port
