05-BasicInternship/03-BackendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proshop-backend-deployment
  labels:
    app: proshop-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proshop-backend
  template:
    metadata:
      labels:
        app: proshop-backend
    spec:
      containers:
      - name: proshop-backend
        # Public Docker image for your backend
        image: arun2565/my-app-backend:tag17
        ports:
        - containerPort: 5000
        
        # Example environment variables (optional)
        # Uncomment & edit if needed:
---
apiVersion: v1
kind: Service
metadata:
  name: proshop-backend-service
  labels:
    app: proshop-backend
spec:
  # Currently only accessible within the cluster
  type: ClusterIP
  selector:
    app: proshop-backend
  ports:
    - port: 5000        # The Service port inside the cluster
      targetPort: 5000  # Matches containerPort in Deployment
