05-BasicInternship/proshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proshop-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"  # Use GCE Ingress
    networking.gke.io/managed-certificates: "gkecloud-com-cert"  # Reference the managed certificate
spec:
  rules:
    - host: dummy.gkecloud.com  # The domain name
      http:
        paths:
          # Backend service for API calls
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: proshop-backend-service
                port:
                  number: 5000
          # Frontend service for everything else
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proshop-frontend-service
                port:
                  number: 80
